20250411/snake/k8s-manifast/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-app
  namespace : lkz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-ingress-ingress-384a56aad6-58d6c44bbe0b46359e76700a077a5f06.ke.kr-central-2.kakaocloud.com
    http:
      paths:
      - path: /lkz(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /lkz/api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /snake
        pathType: Prefix
        backend:
          service:
            name: snake-game-service
            port:
              number: 100
